# chrome_module

./: .gitignore  main.py  pyproject.toml
src/chromedriver/: __init__.py  chromedriver.py  chromedriver_manager.py  os_utils.py
