[tool.poetry]
name = "chromedriver"
version = "0.0.1"
description = ""
authors = ["Rodrigo Silva <rodrigo.sousa.06@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.5"
selenium = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
